# BookMaker

./: LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.cfg
src/bookmaker/: BookMaker.py  __init__.py  about.py  generated.py  markdown_view.py  my_extra.py  my_table.py  pre_view.py  requirements.in  requirements.txt  toc_utils.py  toc_view.py
src/bookmaker/css_resources/: github-markdown.css  github-pygments.css
