[metadata]
metadata_version: 2.2

name = bookmaker

author = Chris Brown
author_email = chris@marcrisoft.co.uk
maintainer = Chris Brown
maintainer_email = chris@marcrisoft.co.uk

# keep in sync with bookmaker/__init__.py (setuptools >=46.4.0)
version = attr: bookmaker.__version__

description = Marcrisoft Utilities
long_description = file: README.md
long_description_content_type = text/markdown
#keywords = python, packaging,

platforms = Linux

#url = https://github.com/marcris/pep517example
#download_url = https://github.com/marcris/pep517example

license = MIT License
#license_files = LICENSE.txt

classifiers =
    Programming Language :: Python :: 3.8
    Development Status:: 4 - Beta
    Intended Audience :: End Users/Desktop

[options]
include_package_data = True
#namespace_packages = src
packages = find:
package_dir =
    =src

[options.packages.find]
where = src

python_requires = >=3.8
#install_requires = PyGObject
# not needed; application brings its own dependencies in venv

[options.entry_points]
gui_scripts =
	bm=bookmaker:main
	hw=helloworld:main

